[package]
name = "sscrem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1.40.0", features = ["sync", "macros", "rt-multi-thread"] }
twitch-irc = { version = "5.0.1", features = ["refreshing-token-native-tls"] }
